# SolarConflux

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
case_studies/: README.md
case_studies/examples/earth_solar_orbiter_2025/: README.md  command.sh
case_studies/examples/earth_solar_orbiter_2025/outputs/2025-01-01_to_2025-01-14/: 2025-01-01_to_2025-01-14.csv  run_metadata.json
case_studies/validation/solar_orbiter_bepicolombo/: README.md  command.sh  notes.md
docs/: parker_spiral_convention.md  release_plan.md  scientific_validation.md
examples/earth_solar_orbiter_2025/: README.md  command.sh
solarconflux/: __init__.py  angles.py  bodies.py  cli.py  events.py  export.py  functions.py  geometries.py  plotting.py  trajectories.py  validation.py
solarconflux/spatialitems/: functions.py  geometries.py
tests/: test_angles.py  test_cli.py  test_events.py  test_export.py  test_geometries.py  test_integration_horizons.py  test_parker_spiral.py  test_plotting.py  test_validation.py
validation_cases/solar_orbiter_bepicolombo/: README.md  command.sh  notes.md
validation_cases/solar_orbiter_bepicolombo/outputs/2025-01-01_to_2025-01-07/: 2025-01-01_to_2025-01-07.csv  run_metadata.json
