[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "solarconflux"
version = "0.1.0"
description = "Approximate heliocentric trajectory geometry and Parker-spiral alignment screening for coordinated solar observations."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Emma Vellard", email = "emma.vellard@outlook.fr" }]
dependencies = [
    "numpy",
    "matplotlib",
    "astropy",
    "sunpy",
    "astroquery",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
solarconflux = "solarconflux.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring live Horizons/network access",
]
